--- a/damage_segmentations_weight_evo_sec (4).ipynb
+++ b/damage_segmentations_weight_evo_sec (4).ipynb
@@ -140,7 +140,7 @@
         "Use your roboflow API key here\n",
         "\"\"\"\n",
         "\n",
-        "API_KEY = '1ZLW19FM0rXgzUAR7gd3'"
+        "API_KEY = 'XXXXXXXXXXXXXXXXXXXXXXXXX'"
       ],
       "metadata": {
         "id": "CDB6k6X91GQj"
